# Axelo_JSReverse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  axelo_chat.py  check_evidence.py  conftest.py  package-lock.json  pyproject.toml  railway.json  test_all_sites.py  test_amazon.py
.claude/: settings.local.json
.playwright-mcp/: page-2026-04-12T11-15-11-211Z.yml  page-2026-04-12T11-15-54-888Z.yml  page-2026-04-12T12-54-08-443Z.yml  page-2026-04-12T12-54-29-025Z.yml  page-2026-04-12T13-06-15-733Z.yml  page-2026-04-12T13-09-06-409Z.yml  page-2026-04-12T13-09-11-867Z.yml  page-2026-04-12T13-10-16-391Z.yml
.sisyphus/drafts/: root-cause-analysis.md  tool-architecture-refactor.md  true-reverse-engineering.md
.sisyphus/plans/: ai-conversation-architecture.md  ai-first-response-plan.md  ai-orchestration-architecture.md  ai-tool-calling-upgrade.md  anti-detection.md  architecture-cleanup.md  codegen-fix-plan.md  dual-ai-architecture-plan.md  dual-model-architecture.md  ecommerce-crawler-audit.md  ecommerce-optimization.md  fundamental-fix.md  long-term-stability.md  module-integration.md  production-migration-v2.md  production-migration.md  (+6 more)
axelo/: __init__.py  cli.py  config.py  presentation.py  run_counter.py  session.py  wizard.py
docs/: architecture.md  automation_cost_plan.md  compliant_reverse_design.md  constitutional_agent_blueprint.md  mechanism_truth_reconstruction_plan.md
scripts/: fix_db.py  gen_ts_contracts.py  inspect_test_runs.py
tests/: conftest.py  e2e_ecommerce_test.py  e2e_report.json  shared_port.py  test_suite.py
(+463 files in other folders)
